--- a/public/pwa.html
+++ b/public/pwa.html
@@ -1,21 +1,17 @@
 <!doctype html>
-<html lang="{{ str_replace('_', '-', app()->getLocale()) }}">
+<html lang="tr">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="manifest" href="{{ asset('manifest.json') }}">
+    <link rel="manifest" href="manifest.json">
     <meta name="theme-color" content="#1976d2">
-
-    <!-- CSRF Token -->
-    <meta name="csrf-token" content="{{ csrf_token() }}">
-
-    <title>{{ config('app.name', 'Laravel') }}</title>
+    <title>PWA</title>
 
     <!-- Scripts -->
-    <script src="{{ asset('js/admin.js') }}" defer></script>
+    <script src="js/admin.js" defer></script>
 
     <!-- Styles -->
-    <link href="{{ asset('css/admin.css') }}" rel="stylesheet">
+    <link href="css/admin.css" rel="stylesheet">
 
     <script>
         if ('serviceWorker' in navigator) {
@@ -30,8 +26,8 @@
     </script>
 </head>
 <body>
-    <div id="app">
-        <router-view></router-view>
-    </div>
+<div id="app">
+    <router-view></router-view>
+</div>
 </body>
 </html>
